Java 25 upgrade